Format with ruff

--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -82,7 +82,6 @@
     "from qiskit.visualization import plot_gate_map\n",
     "\n",
     "\n",
-    "\n",
     "class FakeLOCCBackend(BackendV2):\n",
     "    \"\"\"Fake multi chip backend.\"\"\"\n",
     "\n",
@@ -98,11 +97,15 @@
     "            number_of_chips (int): The number of chips to have in the multichip backend\n",
     "                each chip will be a heavy hex graph of ``distance`` code distance.\n",
     "        \"\"\"\n",
-    "        super().__init__(name='Fake LOCC backend')\n",
+    "        super().__init__(name=\"Fake LOCC backend\")\n",
     "        # Create a heavy-hex graph using the rustworkx library, then instantiate a new target\n",
-    "        self._graph = rx.generators.directed_heavy_hex_graph(distance, bidirectional=False)\n",
+    "        self._graph = rx.generators.directed_heavy_hex_graph(\n",
+    "            distance, bidirectional=False\n",
+    "        )\n",
     "        num_qubits = len(self._graph) * number_of_chips\n",
-    "        self._target = Target(\"Fake multi-chip backend\", num_qubits=num_qubits)\n",
+    "        self._target = Target(\n",
+    "            \"Fake multi-chip backend\", num_qubits=num_qubits\n",
+    "        )\n",
     "\n",
     "        # Generate instruction properties for single qubit gates and a measurement, delay,\n",
     "        #  and reset operation to every qubit in the backend.\n",
@@ -118,13 +121,16 @@
     "            qarg = (i,)\n",
     "            rz_props[qarg] = InstructionProperties(error=0.0, duration=0.0)\n",
     "            x_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-6, 1e-4), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-6, 1e-4),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            sx_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-6, 1e-4), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-6, 1e-4),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            measure_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-3, 1e-1), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-3, 1e-1),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            delay_props[qarg] = None\n",
     "        self._target.add_instruction(XGate(), x_props)\n",
@@ -141,7 +147,8 @@
     "                offset = i * len(self._graph)\n",
     "                edge = (root_edge[0] + offset, root_edge[1] + offset)\n",
     "                cz_props[edge] = InstructionProperties(\n",
-    "                    error=rng.uniform(7e-4, 5e-3), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                    error=rng.uniform(7e-4, 5e-3),\n",
+    "                    duration=rng.uniform(1e-8, 9e-7),\n",
     "                )\n",
     "        self._target.add_instruction(CZGate(), cz_props)\n",
     "\n",
@@ -155,7 +162,7 @@
     "            count = 0\n",
     "            for edge in edge_list:\n",
     "                if node == edge[0]:\n",
-    "                    count+=1\n",
+    "                    count += 1\n",
     "            if count == 1:\n",
     "                inter_chip_nodes[node] = count\n",
     "        # Create inter-chip ecr props\n",
@@ -163,9 +170,13 @@
     "        inter_chip_edges = list(inter_chip_nodes.keys())\n",
     "        for i in range(1, number_of_chips):\n",
     "            offset = i * len(self._graph)\n",
-    "            edge = (inter_chip_edges[1] + (len(self._graph) * (i-1)) , inter_chip_edges[0] + offset)\n",
+    "            edge = (\n",
+    "                inter_chip_edges[1] + (len(self._graph) * (i - 1)),\n",
+    "                inter_chip_edges[0] + offset,\n",
+    "            )\n",
     "            cx_props[edge] = InstructionProperties(\n",
-    "                error=rng.uniform(7e-4, 5e-3), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(7e-4, 5e-3),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "\n",
     "        self._target.add_instruction(ECRGate(), cx_props)\n",
@@ -182,13 +193,14 @@
     "    def graph(self):\n",
     "        return self._graph\n",
     "\n",
-    "\n",
     "    @classmethod\n",
     "    def _default_options(cls):\n",
     "        return Options(shots=1024)\n",
     "\n",
     "    def run(self, circuit, **kwargs):\n",
-    "        raise NotImplementedError(\"This backend does not contain a run method\")"
+    "        raise NotImplementedError(\n",
+    "            \"This backend does not contain a run method\"\n",
+    "        )"
    ]
   },
   {
@@ -215,25 +227,27 @@
     "coupling_map_backend = target.build_coupling_map()\n",
     "\n",
     "\n",
-    "coordinates = [(3, 1),\n",
-    "               (3, -1),\n",
-    "               (2, -2),\n",
-    "               (1,1),\n",
-    "               (0,0),\n",
-    "               (-1, -1),\n",
-    "               (-2, 2),\n",
-    "               (-3, 1),\n",
-    "               (-3, -1),\n",
-    "               (2, 1),\n",
-    "               (1, -1),\n",
-    "               (-1, 1),\n",
-    "               (-2, -1),\n",
-    "               (3, 0),\n",
-    "               (2, -1),\n",
-    "               (0, 1),\n",
-    "               (0, -1),\n",
-    "               (-2, 1),\n",
-    "               (-3, 0)]\n",
+    "coordinates = [\n",
+    "    (3, 1),\n",
+    "    (3, -1),\n",
+    "    (2, -2),\n",
+    "    (1, 1),\n",
+    "    (0, 0),\n",
+    "    (-1, -1),\n",
+    "    (-2, 2),\n",
+    "    (-3, 1),\n",
+    "    (-3, -1),\n",
+    "    (2, 1),\n",
+    "    (1, -1),\n",
+    "    (-1, 1),\n",
+    "    (-2, -1),\n",
+    "    (3, 0),\n",
+    "    (2, -1),\n",
+    "    (0, 1),\n",
+    "    (0, -1),\n",
+    "    (-2, 1),\n",
+    "    (-3, 0),\n",
+    "]\n",
     "\n",
     "single_qubit_coordinates = []\n",
     "total_qubit_coordinates = []\n",
@@ -243,12 +257,12 @@
     "    total_qubit_coordinates.append(coordinate)\n",
     "\n",
     "for coordinate in coordinates:\n",
-    "    total_qubit_coordinates.append((-1*coordinate[0]+1, coordinate[1]+4))\n",
+    "    total_qubit_coordinates.append(\n",
+    "        (-1 * coordinate[0] + 1, coordinate[1] + 4)\n",
+    "    )\n",
     "\n",
     "for coordinate in coordinates:\n",
-    "    total_qubit_coordinates.append((coordinate[0], coordinate[1]+8))\n",
-    "\n",
-    "\n",
+    "    total_qubit_coordinates.append((coordinate[0], coordinate[1] + 8))\n",
     "\n",
     "\n",
     "line_colors = [\"#adaaab\" for edge in coupling_map_backend.get_edges()]\n",
@@ -256,7 +270,7 @@
     "\n",
     "# Get tuples for the edges which have an ecr instruction attached\n",
     "for instruction in target.instructions:\n",
-    "    if instruction[0].name == 'ecr':\n",
+    "    if instruction[0].name == \"ecr\":\n",
     "        ecr_edges.append(instruction[1])\n",
     "\n",
     "for i, edge in enumerate(coupling_map_backend.get_edges()):\n",
@@ -291,7 +305,12 @@
    ],
    "source": [
     "print(backend.name)\n",
-    "plot_gate_map(backend, plot_directed=True, qubit_coordinates=total_qubit_coordinates, line_color=line_colors)"
+    "plot_gate_map(\n",
+    "    backend,\n",
+    "    plot_directed=True,\n",
+    "    qubit_coordinates=total_qubit_coordinates,\n",
+    "    line_color=line_colors,\n",
+    ")"
    ]
   },
   {
@@ -354,7 +373,7 @@
     "print(\"Pre-Transpilation: \")\n",
     "print(f\"CX gates: {op_counts['cx']}\")\n",
     "print(f\"H gates: {op_counts['h']}\")\n",
-    "print('\\n', 30*'#', '\\n')\n",
+    "print(\"\\n\", 30 * \"#\", \"\\n\")\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
     "transpiled_ghz = pm.run(ghz)\n",
@@ -396,7 +415,9 @@
    "source": [
     "from qiskit.visualization import plot_circuit_layout\n",
     "\n",
-    "plot_circuit_layout(transpiled_ghz, backend, qubit_coordinates=total_qubit_coordinates)"
+    "plot_circuit_layout(\n",
+    "    transpiled_ghz, backend, qubit_coordinates=total_qubit_coordinates\n",
+    ")"
    ]
   },
   {
@@ -421,10 +442,10 @@
     "\n",
     "    def __init__(self):\n",
     "        \"\"\"Instantiate a new backend that is inspired by a toric code\"\"\"\n",
-    "        super().__init__(name='Fake LOCC backend')\n",
+    "        super().__init__(name=\"Fake LOCC backend\")\n",
     "        graph = rx.generators.directed_grid_graph(20, 20)\n",
     "        for column in range(20):\n",
-    "            graph.add_edge(column, 19*20 + column, None)\n",
+    "            graph.add_edge(column, 19 * 20 + column, None)\n",
     "        for row in range(20):\n",
     "            graph.add_edge(row * 20, row * 20 + 19, None)\n",
     "        num_qubits = len(graph)\n",
@@ -440,13 +461,16 @@
     "            qarg = (i,)\n",
     "            rz_props[qarg] = InstructionProperties(error=0.0, duration=0.0)\n",
     "            x_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-6, 1e-4), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-6, 1e-4),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            sx_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-6, 1e-4), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-6, 1e-4),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            measure_props[qarg] = InstructionProperties(\n",
-    "                error=rng.uniform(1e-3, 1e-1), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(1e-3, 1e-1),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "            delay_props[qarg] = None\n",
     "        self._target.add_instruction(XGate(), x_props)\n",
@@ -458,7 +482,8 @@
     "        cz_props = {}\n",
     "        for edge in graph.edge_list():\n",
     "            cz_props[edge] = InstructionProperties(\n",
-    "                error=rng.uniform(7e-4, 5e-3), duration=rng.uniform(1e-8, 9e-7)\n",
+    "                error=rng.uniform(7e-4, 5e-3),\n",
+    "                duration=rng.uniform(1e-8, 9e-7),\n",
     "            )\n",
     "        self._target.add_instruction(CZGate(), cz_props)\n",
     "\n",
