--- a/docs/guides/custom-transpiler-pass.ipynb
+++ b/docs/guides/custom-transpiler-pass.ipynb
@@ -138,12 +138,12 @@
     "\n",
     "            # iterate through Paulis on left of gate to twirl\n",
     "            for pauli_left in pauli_basis(2):\n",
-    "\n",
     "                # iterate through Paulis on right of gate to twirl\n",
     "                for pauli_right in pauli_basis(2):\n",
-    "\n",
     "                    # save pairs that produce identical operation as gate to twirl\n",
-    "                    if (Operator(pauli_left) @ Operator(twirl_gate)).equiv(Operator(twirl_gate) @ pauli_right):\n",
+    "                    if (Operator(pauli_left) @ Operator(twirl_gate)).equiv(\n",
+    "                        Operator(twirl_gate) @ pauli_right\n",
+    "                    ):\n",
     "                        twirl_list.append((pauli_left, pauli_right))\n",
     "\n",
     "            self.twirl_set[twirl_gate.name] = twirl_list\n",
@@ -152,15 +152,18 @@
     "        self,\n",
     "        dag: DAGCircuit,\n",
     "    ) -> DAGCircuit:\n",
-    "\n",
     "        # collect all nodes in DAG and proceed if it is to be twirled\n",
-    "        twirling_gate_classes = tuple(gate.base_class for gate in self.gates_to_twirl)\n",
+    "        twirling_gate_classes = tuple(\n",
+    "            gate.base_class for gate in self.gates_to_twirl\n",
+    "        )\n",
     "        for node in dag.op_nodes():\n",
     "            if not isinstance(node.op, twirling_gate_classes):\n",
     "                continue\n",
     "\n",
     "            # random integer to select Pauli twirl pair\n",
-    "            pauli_index = np.random.randint(0, len(self.twirl_set[node.op.name]))\n",
+    "            pauli_index = np.random.randint(\n",
+    "                0, len(self.twirl_set[node.op.name])\n",
+    "            )\n",
     "            twirl_pair = self.twirl_set[node.op.name][pauli_index]\n",
     "\n",
     "            # instantiate mini_dag and attach quantum register\n",
@@ -169,9 +172,13 @@
     "            mini_dag.add_qreg(register)\n",
     "\n",
     "            # apply left Pauli, gate to twirl, and right Pauli to empty mini-DAG\n",
-    "            mini_dag.apply_operation_back(twirl_pair[0].to_instruction(), [register[0], register[1]])\n",
+    "            mini_dag.apply_operation_back(\n",
+    "                twirl_pair[0].to_instruction(), [register[0], register[1]]\n",
+    "            )\n",
     "            mini_dag.apply_operation_back(node.op, [register[0], register[1]])\n",
-    "            mini_dag.apply_operation_back(twirl_pair[1].to_instruction(), [register[0], register[1]])\n",
+    "            mini_dag.apply_operation_back(\n",
+    "                twirl_pair[1].to_instruction(), [register[0], register[1]]\n",
+    "            )\n",
     "\n",
     "            # substitute gate to twirl node with twirling mini-DAG\n",
     "            dag.substitute_node_with_dag(node, mini_dag)\n",
@@ -215,7 +222,7 @@
     "qc.ecr(1, 2)\n",
     "qc.ecr(1, 0)\n",
     "qc.cx(2, 1)\n",
-    "qc.draw('mpl')"
+    "qc.draw(\"mpl\")"
    ]
   },
   {
@@ -266,7 +273,7 @@
     }
    ],
    "source": [
-    "twirled_qcs[-1].draw('mpl')"
+    "twirled_qcs[-1].draw(\"mpl\")"
    ]
   },
   {
