--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -51,7 +51,7 @@
     "qc.measure_all()\n",
     "\n",
     "# View the circuit\n",
-    "qc.draw(output='mpl')"
+    "qc.draw(output=\"mpl\")"
    ]
   },
   {
@@ -87,11 +87,13 @@
     "backend = FakeSherbrooke()\n",
     "\n",
     "# Transpile the circuit\n",
-    "pass_manager = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
+    "pass_manager = generate_preset_pass_manager(\n",
+    "    optimization_level=1, backend=backend\n",
+    ")\n",
     "transpiled_circ = pass_manager.run(qc)\n",
     "\n",
     "# View the transpiled circuit\n",
-    "transpiled_circ.draw(output='mpl', idle_wires=False)"
+    "transpiled_circ.draw(output=\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -238,7 +240,7 @@
     "    scheduling_method=None,\n",
     "    approximation_degree=1.0,\n",
     "    seed_transpiler=None,\n",
-    "    unitary_synthesis_method='default',\n",
+    "    unitary_synthesis_method=\"default\",\n",
     "    unitary_synthesis_plugin_config=None,\n",
     "    hls_config=None,\n",
     "    init_method=None,\n",
