--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -42,6 +42,7 @@
    "source": [
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
     "service = QiskitRuntimeService(instance=\"ibm-q/open/main\")\n",
     "\n",
     "service.backends()"
@@ -255,7 +256,7 @@
     }
    ],
    "source": [
-    "backend.target[\"ecr\"][(1,0)]"
+    "backend.target[\"ecr\"][(1, 0)]"
    ]
   },
   {
