--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -92,9 +92,9 @@
     "pubs = [(circuit, observable)]\n",
     "\n",
     "job = function.run(\n",
-    "  # Use `backend_name=backend_name` if you didn't initialize a backend object\n",
-    "  backend_name=backend.name,\n",
-    "  pubs=pubs\n",
+    "    # Use `backend_name=backend_name` if you didn't initialize a backend object\n",
+    "    backend_name=backend.name,\n",
+    "    pubs=pubs,\n",
     ")"
    ]
   },
@@ -155,10 +155,14 @@
     }
    ],
    "source": [
-    "print(f'The result of the submitted job had {len(result)} PUB\\n')\n",
-    "print(f'The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n')\n",
-    "print(f'And this DataBin has attributes: {result[0].data.keys()}')\n",
-    "print(f'The expectation values measured from this PUB are: \\n{result[0].data.evs}')"
+    "print(f\"The result of the submitted job had {len(result)} PUB\\n\")\n",
+    "print(\n",
+    "    f\"The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n\"\n",
+    ")\n",
+    "print(f\"And this DataBin has attributes: {result[0].data.keys()}\")\n",
+    "print(\n",
+    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
+    ")"
    ]
   },
   {
@@ -227,11 +231,7 @@
    "source": [
     "options = {\"mitigation_level\": 2}\n",
     "\n",
-    "job = function.run(\n",
-    "  backend_name=backend.name,\n",
-    "  pubs=pubs,\n",
-    "  options=options\n",
-    ")"
+    "job = function.run(backend_name=backend.name, pubs=pubs, options=options)"
    ]
   },
   {
@@ -271,10 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = {\n",
-    "  \"mitigation_level\": 1,\n",
-    "  \"resilience\": {\"zne_mitigation\": True}\n",
-    "}"
+    "options = {\"mitigation_level\": 1, \"resilience\": {\"zne_mitigation\": True}}"
    ]
   },
   {
@@ -324,9 +321,11 @@
     }
    ],
    "source": [
-    "print(f'The result of the submitted job had {len(result)} PUB')\n",
-    "print(f'The expectation values measured from this PUB are: \\n{result[0].data.evs}')\n",
-    "print(f'And the associated metadata is: \\n{result[0].metadata}')"
+    "print(f\"The result of the submitted job had {len(result)} PUB\")\n",
+    "print(\n",
+    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
+    ")\n",
+    "print(f\"And the associated metadata is: \\n{result[0].metadata}\")"
    ]
   },
   {
@@ -368,9 +367,7 @@
    ],
    "source": [
     "job = function.run(\n",
-    "  backend_name=\"bad_backend_name\",\n",
-    "  pubs=pubs,\n",
-    "  options=options\n",
+    "    backend_name=\"bad_backend_name\", pubs=pubs, options=options\n",
     ")\n",
     "\n",
     "print(job.result())"
