--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -28,7 +28,11 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2\n",
     "from qiskit_ibm_runtime.noise_learner import NoiseLearner\n",
-    "from qiskit_ibm_runtime.options import NoiseLearnerOptions, ResilienceOptionsV2, EstimatorOptions\n",
+    "from qiskit_ibm_runtime.options import (\n",
+    "    NoiseLearnerOptions,\n",
+    "    ResilienceOptionsV2,\n",
+    "    EstimatorOptions,\n",
+    ")\n",
     "\n",
     "# Build a circuit with two entangling layers\n",
     "num_qubits = 27\n",
@@ -123,12 +127,18 @@
     }
    ],
    "source": [
-    "print(f'Noise learner result contains {len(noise_model.data)} entries'\\\n",
-    "       f' and has the following type:\\n {type(noise_model)}\\n')\n",
-    "print(f'Each element of `NoiseLearnerResult` then contains'\\\n",
-    "       f' an object of type:\\n {type(noise_model.data[0])}\\n')\n",
-    "print(f'And each of these `LayerError` objects possess the'\\\n",
-    "      f' following data: \\n{noise_model.data[0].error}\\n')"
+    "print(\n",
+    "    f\"Noise learner result contains {len(noise_model.data)} entries\"\n",
+    "    f\" and has the following type:\\n {type(noise_model)}\\n\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Each element of `NoiseLearnerResult` then contains\"\n",
+    "    f\" an object of type:\\n {type(noise_model.data[0])}\\n\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"And each of these `LayerError` objects possess the\"\n",
+    "    f\" following data: \\n{noise_model.data[0].error}\\n\"\n",
+    ")"
    ]
   },
   {
@@ -176,9 +186,7 @@
     "\n",
     "# Instantiate a noise learner options object\n",
     "learner_options = NoiseLearnerOptions(\n",
-    "    max_layers_to_learn = 3,\n",
-    "    num_randomizations = 32,\n",
-    "    twirling_strategy = \"all\"\n",
+    "    max_layers_to_learn=3, num_randomizations=32, twirling_strategy=\"all\"\n",
     ")\n",
     "\n",
     "# Instantiate a NoiseLearner object and execute the noise learning program\n",
@@ -230,8 +238,10 @@
    "outputs": [],
    "source": [
     "# Specify options via a dictionary\n",
-    "options_dict = {'resilience_level':2,\n",
-    "                'resilience':{'layer_noise_model': noise_model}}\n",
+    "options_dict = {\n",
+    "    \"resilience_level\": 2,\n",
+    "    \"resilience\": {\"layer_noise_model\": noise_model},\n",
+    "}\n",
     "\n",
     "estimator = EstimatorV2(mode=backend, options=options_dict)"
    ]
