--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -61,7 +61,7 @@
     "circ.measure(0, 0)\n",
     "circ.measure(1, 1)\n",
     "\n",
-    "circ.draw('mpl')"
+    "circ.draw(\"mpl\")"
    ]
   },
   {
@@ -91,8 +91,10 @@
     "\n",
     "backend = FakeValenciaV2()\n",
     "\n",
-    "with pulse.build(backend, name='hadamard') as h_q0:\n",
-    "    pulse.play(Gaussian(duration=128, amp=0.1, sigma=16), pulse.drive_channel(0))"
+    "with pulse.build(backend, name=\"hadamard\") as h_q0:\n",
+    "    pulse.play(\n",
+    "        Gaussian(duration=128, amp=0.1, sigma=16), pulse.drive_channel(0)\n",
+    "    )"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "circ.add_calibration('h', [0], h_q0)"
+    "circ.add_calibration(\"h\", [0], h_q0)"
    ]
   },
   {
@@ -206,14 +208,16 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "backend = FakeHanoiV2()\n",
-    "passmanager = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
+    "passmanager = generate_preset_pass_manager(\n",
+    "    optimization_level=1, backend=backend\n",
+    ")\n",
     "circ = passmanager.run(circ)\n",
     "\n",
     "# Print instructions that only affect qubits 0 and 1\n",
     "for instruction, qubits in FakeHanoiV2().instructions:\n",
     "    if qubits and set(qubits).issubset({0, 1}):\n",
     "        print(instruction, qubits)\n",
-    "circ.draw('mpl', idle_wires=False)"
+    "circ.draw(\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -253,12 +257,12 @@
     "from qiskit.circuit import Gate\n",
     "\n",
     "circ = QuantumCircuit(1, 1)\n",
-    "custom_gate = Gate('my_custom_gate', 1, [3.14, 1])\n",
+    "custom_gate = Gate(\"my_custom_gate\", 1, [3.14, 1])\n",
     "# 3.14 is an arbitrary parameter for demonstration\n",
     "circ.append(custom_gate, [0])\n",
     "circ.measure(0, 0)\n",
     "\n",
-    "circ.draw('mpl')"
+    "circ.draw(\"mpl\")"
    ]
   },
   {
@@ -268,10 +272,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pulse.build(backend, name='custom') as my_schedule:\n",
-    "    pulse.play(Gaussian(duration=64, amp=0.2, sigma=8), pulse.drive_channel(0))\n",
+    "with pulse.build(backend, name=\"custom\") as my_schedule:\n",
+    "    pulse.play(\n",
+    "        Gaussian(duration=64, amp=0.2, sigma=8), pulse.drive_channel(0)\n",
+    "    )\n",
     "\n",
-    "circ.add_calibration('my_custom_gate', [0], my_schedule, [3.14, 1])\n",
+    "circ.add_calibration(\"my_custom_gate\", [0], my_schedule, [3.14, 1])\n",
     "# Alternatively: circ.add_calibration(custom_gate, [0], my_schedule)"
    ]
   },
@@ -305,7 +311,7 @@
    ],
    "source": [
     "circ = passmanager.run(circ)\n",
-    "circ.draw('mpl', idle_wires=False)"
+    "circ.draw(\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -378,7 +384,9 @@
     ")\n",
     "\n",
     "# Re-generate the passmanager with the new backend target\n",
-    "passmanager = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
+    "passmanager = generate_preset_pass_manager(\n",
+    "    optimization_level=1, backend=backend\n",
+    ")\n",
     "qc = passmanager.run(qc)"
    ]
   },
@@ -429,7 +437,7 @@
    "source": [
     "from qiskit import pulse\n",
     "\n",
-    "with pulse.build(name='my_example') as my_program:\n",
+    "with pulse.build(name=\"my_example\") as my_program:\n",
     "    # Add instructions here\n",
     "    pass\n",
     "\n",
@@ -515,11 +523,13 @@
     "\n",
     "backend = FakeValenciaV2()\n",
     "\n",
-    "with pulse.build(backend=backend, name='backend_aware') as backend_aware_program:\n",
+    "with pulse.build(\n",
+    "    backend=backend, name=\"backend_aware\"\n",
+    ") as backend_aware_program:\n",
     "    channel = pulse.drive_channel(0)\n",
     "    print(pulse.num_qubits())\n",
     "    # Raises an error as backend only has 5 qubits\n",
-    "    #pulse.drive_channel(100)"
+    "    # pulse.drive_channel(100)"
    ]
   },
   {
@@ -626,8 +636,9 @@
     }
    ],
    "source": [
-    "gaussian = pulse.library.Gaussian(num_samples, amp, sigma,\n",
-    "                              name=\"Parametric Gaussian\")\n",
+    "gaussian = pulse.library.Gaussian(\n",
+    "    num_samples, amp, sigma, name=\"Parametric Gaussian\"\n",
+    ")\n",
     "gaussian.draw()"
    ]
   },
@@ -666,7 +677,9 @@
     "import numpy as np\n",
     "\n",
     "times = np.arange(num_samples)\n",
-    "gaussian_samples = np.exp(-1/2 *((times - num_samples / 2) ** 2 / sigma**2))\n",
+    "gaussian_samples = np.exp(\n",
+    "    -1 / 2 * ((times - num_samples / 2) ** 2 / sigma**2)\n",
+    ")\n",
     "\n",
     "gaussian = library.Waveform(gaussian_samples, name=\"WF Gaussian\")\n",
     "gaussian.draw()"
@@ -738,7 +751,7 @@
    ],
    "source": [
     "with pulse.build() as schedule:\n",
-    "    pulse.play([0.001*i for i in range(160)], channel)\n",
+    "    pulse.play([0.001 * i for i in range(160)], channel)\n",
     "schedule.draw()"
    ]
   },
@@ -921,7 +934,7 @@
     }
    ],
    "source": [
-    "with pulse.build(backend, name='Left align example') as program:\n",
+    "with pulse.build(backend, name=\"Left align example\") as program:\n",
     "    with pulse.align_left():\n",
     "        gaussian_pulse = library.Gaussian(100, 0.5, 20)\n",
     "        pulse.play(gaussian_pulse, pulse.drive_channel(0))\n",
@@ -965,7 +978,7 @@
     }
    ],
    "source": [
-    "with pulse.build(backend, name='Right align example') as program:\n",
+    "with pulse.build(backend, name=\"Right align example\") as program:\n",
     "    with pulse.align_right():\n",
     "        gaussian_pulse = library.Gaussian(100, 0.5, 20)\n",
     "        pulse.play(gaussian_pulse, pulse.drive_channel(0))\n",
@@ -1007,9 +1020,9 @@
     }
    ],
    "source": [
-    "with pulse.build(backend, name='example') as program:\n",
+    "with pulse.build(backend, name=\"example\") as program:\n",
     "    gaussian_pulse = library.Gaussian(100, 0.5, 20)\n",
-    "    with pulse.align_equispaced(2*gaussian_pulse.duration):\n",
+    "    with pulse.align_equispaced(2 * gaussian_pulse.duration):\n",
     "        pulse.play(gaussian_pulse, pulse.drive_channel(0))\n",
     "    pulse.play(gaussian_pulse, pulse.drive_channel(1))\n",
     "    pulse.play(gaussian_pulse, pulse.drive_channel(1))\n",
@@ -1049,7 +1062,7 @@
     }
    ],
    "source": [
-    "with pulse.build(backend, name='example') as program:\n",
+    "with pulse.build(backend, name=\"example\") as program:\n",
     "    with pulse.align_sequential():\n",
     "        gaussian_pulse = library.Gaussian(100, 0.5, 20)\n",
     "        pulse.play(gaussian_pulse, pulse.drive_channel(0))\n",
@@ -1091,7 +1104,7 @@
     }
    ],
    "source": [
-    "with pulse.build(backend, name='Offset example') as program:\n",
+    "with pulse.build(backend, name=\"Offset example\") as program:\n",
     "    with pulse.phase_offset(3.14, pulse.drive_channel(0)):\n",
     "        pulse.play(gaussian_pulse, pulse.drive_channel(0))\n",
     "        with pulse.frequency_offset(10e6, pulse.drive_channel(0)):\n",
