--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -307,7 +307,9 @@
     "    f\"The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n\"\n",
     ")\n",
     "print(f\"And this DataBin has attributes: {result[0].data.keys()}\")\n",
-    "print(f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\")"
+    "print(\n",
+    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
+    ")"
    ]
   },
   {
@@ -541,9 +543,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def plot_top_bitstrings(counts_dict, hidden_bitstring=None):\n",
     "    # Sort and take the top 100 bitstrings\n",
-    "    top_100 = sorted(counts_dict.items(), key=lambda x: x[1], reverse=True)[:100]\n",
+    "    top_100 = sorted(counts_dict.items(), key=lambda x: x[1], reverse=True)[\n",
+    "        :100\n",
+    "    ]\n",
     "    if not top_100:\n",
     "        print(\"No bitstrings found in the input dictionary.\")\n",
     "        return\n",
@@ -552,17 +557,21 @@
     "    bitstrings, counts = zip(*top_100)\n",
     "\n",
     "    # Assign colors: purple if the bitstring matches hidden_bitstring, otherwise gray\n",
-    "    colors = ['#680CE9' if bit == hidden_bitstring else 'gray' for bit in bitstrings]\n",
+    "    colors = [\n",
+    "        \"#680CE9\" if bit == hidden_bitstring else \"gray\" for bit in bitstrings\n",
+    "    ]\n",
     "\n",
     "    # Create the bar plot\n",
     "    plt.figure(figsize=(15, 8))\n",
-    "    plt.bar(range(len(bitstrings)), counts, tick_label=bitstrings, color=colors)\n",
+    "    plt.bar(\n",
+    "        range(len(bitstrings)), counts, tick_label=bitstrings, color=colors\n",
+    "    )\n",
     "\n",
     "    # Rotate the bitstrings for better readability\n",
     "    plt.xticks(rotation=90, fontsize=8)\n",
-    "    plt.xlabel('Bitstrings')\n",
-    "    plt.ylabel('Counts')\n",
-    "    plt.title('Top 100 Bitstrings by Counts')\n",
+    "    plt.xlabel(\"Bitstrings\")\n",
+    "    plt.ylabel(\"Counts\")\n",
+    "    plt.title(\"Top 100 Bitstrings by Counts\")\n",
     "\n",
     "    # Show the plot\n",
     "    plt.tight_layout()\n",
