--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -78,9 +78,9 @@
    "execution_count": null,
    "id": "613c4d93",
    "metadata": {
-     "tags": [
-       "remove-cell"
-     ]
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
     "\n",
     "catalog = QiskitFunctionsCatalog(token=\"<YOUR_IQP_API_TOKEN>\")\n",
     "\n",
-    "qesem_function  = catalog.load('qedma/qesem')"
+    "qesem_function = catalog.load(\"qedma/qesem\")"
    ]
   },
   {
@@ -128,18 +128,13 @@
    "outputs": [],
    "source": [
     "job = qesem_function.run(\n",
-    "    action = \"estimate_qpu_time\",\n",
-    "    instance = \"hub/group/project\",\n",
-    "    pubs = [\n",
-    "        (\n",
-    "            circ,\n",
-    "            [obs1,obs2,obs3]\n",
-    "        )\n",
-    "    ],\n",
-    "    precision = 0.03,\n",
-    "    run_options = {\n",
+    "    action=\"estimate_qpu_time\",\n",
+    "    instance=\"hub/group/project\",\n",
+    "    pubs=[(circ, [obs1, obs2, obs3])],\n",
+    "    precision=0.03,\n",
+    "    run_options={\n",
     "        \"backend_name\": \"ibm_brisbane\",\n",
-    "    }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -159,18 +154,13 @@
    "outputs": [],
    "source": [
     "job = qesem_function.run(\n",
-    "    action = \"execute\",\n",
-    "    instance = \"hub/group/project\",\n",
-    "    pubs = [\n",
-    "        (\n",
-    "            circ,\n",
-    "            [obs1,obs2,obs3]\n",
-    "        )\n",
-    "    ],\n",
-    "    precision = 0.03,\n",
-    "    run_options = {\n",
+    "    action=\"execute\",\n",
+    "    instance=\"hub/group/project\",\n",
+    "    pubs=[(circ, [obs1, obs2, obs3])],\n",
+    "    precision=0.03,\n",
+    "    run_options={\n",
     "        \"backend_name\": \"ibm_brisbane\",\n",
-    "    }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -224,22 +214,14 @@
    "source": [
     "# example execute QESEM job\n",
     "job = qesem_function.run(\n",
-    "    action = \"execute\",\n",
-    "    instance = \"hub/group/project\",\n",
-    "    pubs = [\n",
-    "        (\n",
-    "            bell,\n",
-    "            [obs1,obs2,obs3]\n",
-    "        )\n",
-    "    ],\n",
-    "    precision = 0.03,\n",
-    "    run_options = {\n",
+    "    action=\"execute\",\n",
+    "    instance=\"hub/group/project\",\n",
+    "    pubs=[(bell, [obs1, obs2, obs3])],\n",
+    "    precision=0.03,\n",
+    "    run_options={\n",
     "        \"backend_name\": \"ibm_brisbane\",\n",
     "    },\n",
-    "    custom_options = {\n",
-    "        \"max_qpu_time\": 14400,\n",
-    "        \"transpilation_level\": 0\n",
-    "    }\n",
+    "    custom_options={\"max_qpu_time\": 14400, \"transpilation_level\": 0},\n",
     ")"
    ]
   },
