--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -136,14 +136,14 @@
    "source": [
     "mole = {\n",
     "    \"atom\": \"O 0 0 0; H 0.2774 0.8929 0.2544; H 0.6068 -0.2383 -0.7169\",\n",
-    "    \"basis\": \"6-31g\",   # default to \"sto-3g\"\n",
-    "    \"spin\": 0.0,        # default to 0.0. Current code forces spin = 0.0\n",
-    "    \"charge\": 0,        # default to 0\n",
-    "    \"active_space\": {   # default to None. Equivalent to no active space chosen.\n",
+    "    \"basis\": \"6-31g\",  # default to \"sto-3g\"\n",
+    "    \"spin\": 0.0,  # default to 0.0. Current code forces spin = 0.0\n",
+    "    \"charge\": 0,  # default to 0\n",
+    "    \"active_space\": {  # default to None. Equivalent to no active space chosen.\n",
     "        \"n_active_ele\": 10,\n",
     "        \"n_active_orb\": 10,\n",
-    "        \"active_orbs_indices\": [i for i in range(10)]\n",
-    "    }\n",
+    "        \"active_orbs_indices\": [i for i in range(10)],\n",
+    "    },\n",
     "}"
    ]
   },
@@ -243,8 +243,10 @@
     "qsci_uccsd_json = {\n",
     "    \"mole\": mole,\n",
     "    \"ansatz\": \"UCCSD\",\n",
-    "    \"state_prep_method\": \"CCSD\",    # this is optional and defaulted to \"CCSD\".\n",
-    "    \"ansatz_setting\": {\"use_singles\": False},   # this is optional and defaulted to the list above.\n",
+    "    \"state_prep_method\": \"CCSD\",  # this is optional and defaulted to \"CCSD\".\n",
+    "    \"ansatz_setting\": {\n",
+    "        \"use_singles\": False\n",
+    "    },  # this is optional and defaulted to the list above.\n",
     "    \"qsci_setting\": {\"n_shots\": 1e5, \"number_of_states_pick_out\": 1e4},\n",
     "}"
    ]
@@ -269,14 +271,14 @@
     "qsci_double_exc_json = {\n",
     "    \"mole\": mole,\n",
     "    \"ansatz\": \"DoubleExcitation\",\n",
-    "    \"state_prep_method\": \"CCSD\",    # this is optional and defaulted to \"CCSD\".\n",
-    "    \"ansatz_setting\": {\"n_amplitudes\": 20}, # this is optional and defaulted to {\"n_amplitudes\": 10}.\n",
+    "    \"state_prep_method\": \"CCSD\",  # this is optional and defaulted to \"CCSD\".\n",
+    "    \"ansatz_setting\": {\n",
+    "        \"n_amplitudes\": 20\n",
+    "    },  # this is optional and defaulted to {\"n_amplitudes\": 10}.\n",
     "    \"qsci_setting\": {\"n_shots\": 1e5, \"number_of_states_pick_out\": 5e4},\n",
-    "    \"mitigation_setting\": {     # please refer to the \"error mitigation\" section of this tutorial.\n",
-    "        \"configuration_recovery\": {\n",
-    "            \"number_of_states_pick_out\": 10000\n",
-    "        }\n",
-    "    }\n",
+    "    \"mitigation_setting\": {  # please refer to the \"error mitigation\" section of this tutorial.\n",
+    "        \"configuration_recovery\": {\"number_of_states_pick_out\": 10000}\n",
+    "    },\n",
     "}"
    ]
   },
@@ -349,6 +351,7 @@
    "source": [
     "import datetime\n",
     "import time\n",
+    "\n",
     "job = function.run(\n",
     "    method=\"QSCI\",\n",
     "    parameters=qsci_double_exc_json,\n",
@@ -357,10 +360,10 @@
     ")\n",
     "\n",
     "while True:\n",
-    "   print(datetime.datetime.now(), job.status())\n",
-    "   if job.status() in [\"ERROR\", \"DONE\"]:\n",
-    "       break\n",
-    "   time.sleep(10)\n",
+    "    print(datetime.datetime.now(), job.status())\n",
+    "    if job.status() in [\"ERROR\", \"DONE\"]:\n",
+    "        break\n",
+    "    time.sleep(10)\n",
     "\n",
     "result = job.result()"
    ]
@@ -416,7 +419,7 @@
     }
    ],
    "source": [
-    "CASCI_ENERGY = -76.0508056368444    # Exact result\n",
+    "CASCI_ENERGY = -76.0508056368444  # Exact result\n",
     "qsci_energy = result[\"qsci_energy\"]\n",
     "print(f\"CASCI energy: {CASCI_ENERGY} Ha\")\n",
     "print(f\"QSCI energy: {qsci_energy} Ha\")\n",
@@ -470,14 +473,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "amps = np.array(result[\"state_vector\"][\"reals\"]) + 1j * np.array(result[\"state_vector\"][\"imags\"])\n",
+    "amps = np.array(result[\"state_vector\"][\"reals\"]) + 1j * np.array(\n",
+    "    result[\"state_vector\"][\"imags\"]\n",
+    ")\n",
     "sort_idx = np.argsort(np.abs(amps))\n",
     "\n",
-    "for i, (bit, real, imag) in enumerate(zip(\n",
-    "    np.array(result[\"state_vector\"][\"bits\"])[sort_idx][::-1],\n",
-    "    np.array(result[\"state_vector\"][\"reals\"])[sort_idx][::-1],\n",
-    "    np.array(result[\"state_vector\"][\"imags\"])[sort_idx][::-1],\n",
-    ")):\n",
+    "for i, (bit, real, imag) in enumerate(\n",
+    "    zip(\n",
+    "        np.array(result[\"state_vector\"][\"bits\"])[sort_idx][::-1],\n",
+    "        np.array(result[\"state_vector\"][\"reals\"])[sort_idx][::-1],\n",
+    "        np.array(result[\"state_vector\"][\"imags\"])[sort_idx][::-1],\n",
+    "    )\n",
+    "):\n",
     "    if i > 20:\n",
     "        break\n",
     "    print(\n",
@@ -523,16 +530,14 @@
     "    \"mole\": mole,\n",
     "    \"ansatz\": \"KuCJ\",\n",
     "    \"state_prep_method\": \"RANDOM\",  # this is optional and defaulted to \"RANDOM\" for \"KuCJ\".\n",
-    "    \"ansatz_setting\": {\"k\": 1},     # this is optional and defaulted to the table above.\n",
-    "    \"qsci_setting\": {\n",
-    "        \"n_shots\": 1e5, \"number_of_states_pick_out\": 5e4\n",
+    "    \"ansatz_setting\": {\n",
+    "        \"k\": 1\n",
+    "    },  # this is optional and defaulted to the table above.\n",
+    "    \"qsci_setting\": {\"n_shots\": 1e5, \"number_of_states_pick_out\": 5e4},\n",
+    "    \"max_iter\": 5,  # Default to 2000. Choose 5 iteration for demonstration.\n",
+    "    \"mitigation_setting\": {  # Refer to the \"error mitigation\" section.\n",
+    "        \"configuration_recovery\": {\"number_of_states_pick_out\": 10000}\n",
     "    },\n",
-    "    \"max_iter\": 5,                  # Default to 2000. Choose 5 iteration for demonstration.\n",
-    "    \"mitigation_setting\": {         # Refer to the \"error mitigation\" section.\n",
-    "        \"configuration_recovery\": {\n",
-    "            \"number_of_states_pick_out\": 10000\n",
-    "        }\n",
-    "    }\n",
     "}"
    ]
   },
@@ -544,6 +549,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "opt_job = function.run(\n",
     "    method=\"OPT_QSCI\",\n",
     "    parameters=\"opt_qsci_1ucj_json\",\n",
@@ -634,21 +640,25 @@
     }
    ],
    "source": [
-    "CASCI_ENERGY = -76.0508056368444    # Exact result\n",
+    "CASCI_ENERGY = -76.0508056368444  # Exact result\n",
     "opt_qsci_energy = opt_result[\"qsci_energy\"]\n",
     "print(f\"CASCI energy: {CASCI_ENERGY} Ha\")\n",
     "print(f\"QSCI energy: {opt_qsci_energy} Ha\")\n",
     "print(f\"Energy error: {(opt_qsci_energy - CASCI_ENERGY) * 1000: .2e} mHa\")\n",
     "print()\n",
     "print(\"Top 20 important configurations:\")\n",
-    "amps = np.array(opt_result[\"state_vector\"][\"reals\"]) + 1j * np.array(opt_result[\"state_vector\"][\"imags\"])\n",
+    "amps = np.array(opt_result[\"state_vector\"][\"reals\"]) + 1j * np.array(\n",
+    "    opt_result[\"state_vector\"][\"imags\"]\n",
+    ")\n",
     "sort_idx = np.argsort(np.abs(amps))\n",
     "\n",
-    "for i, (bit, real, imag) in enumerate(zip(\n",
-    "    np.array(opt_result[\"state_vector\"][\"bits\"])[sort_idx][::-1],\n",
-    "    np.array(opt_result[\"state_vector\"][\"reals\"])[sort_idx][::-1],\n",
-    "    np.array(opt_result[\"state_vector\"][\"imags\"])[sort_idx][::-1],\n",
-    ")):\n",
+    "for i, (bit, real, imag) in enumerate(\n",
+    "    zip(\n",
+    "        np.array(opt_result[\"state_vector\"][\"bits\"])[sort_idx][::-1],\n",
+    "        np.array(opt_result[\"state_vector\"][\"reals\"])[sort_idx][::-1],\n",
+    "        np.array(opt_result[\"state_vector\"][\"imags\"])[sort_idx][::-1],\n",
+    "    )\n",
+    "):\n",
     "    if i > 20:\n",
     "        break\n",
     "    print(\n",
@@ -736,9 +746,7 @@
    "source": [
     "# Use default configuration recovery setting\n",
     "default_mitigation_setting = {\n",
-    "    \"mitigation_setting\": {\n",
-    "        \"configuration_recovery\": True\n",
-    "    }\n",
+    "    \"mitigation_setting\": {\"configuration_recovery\": True}\n",
     "}\n",
     "\n",
     "# Customized configuration recovery setting\n",
@@ -747,7 +755,7 @@
     "        \"configuration_recovery\": {\n",
     "            \"n_recover_iteration\": 20,\n",
     "            \"n_batch\": 10,\n",
-    "            \"number_of_states_pick_out\": 5000\n",
+    "            \"number_of_states_pick_out\": 5000,\n",
     "        }\n",
     "    }\n",
     "}"
@@ -786,20 +794,16 @@
    "source": [
     "d = 1.0\n",
     "n2_dissociation_qsci = {\n",
-    "    \"mole\": {\"atom\": f\"N 0 0 0; N 0 0 {d}\",},\n",
+    "    \"mole\": {\n",
+    "        \"atom\": f\"N 0 0 0; N 0 0 {d}\",\n",
+    "    },\n",
     "    \"ansatz\": \"DoubleExcitation\",\n",
     "    \"state_prep_method\": \"CCSD\",\n",
-    "    \"qsci_setting\": {\n",
-    "        \"n_shots\": 100000, \"number_of_states_pick_out\": 50000\n",
-    "    },\n",
-    "    \"mitigation_setting\": {\n",
-    "        \"configuration_recovery\": True\n",
-    "    },\n",
+    "    \"qsci_setting\": {\"n_shots\": 100000, \"number_of_states_pick_out\": 50000},\n",
+    "    \"mitigation_setting\": {\"configuration_recovery\": True},\n",
     "}\n",
     "job = function.run(\n",
-    "    method=\"QSCI\",\n",
-    "    parameters=n2_dissociation_qsci,\n",
-    "    backend=\"ibm_strasbourg\"\n",
+    "    method=\"QSCI\", parameters=n2_dissociation_qsci, backend=\"ibm_strasbourg\"\n",
     ")"
    ]
   },
