--- a/docs/guides/simulate-stabilizer-circuits.ipynb
+++ b/docs/guides/simulate-stabilizer-circuits.ipynb
@@ -104,9 +104,13 @@
     ")\n",
     "\n",
     "# Initialize a Sampler backed by the stabilizer circuit simulator\n",
-    "exact_sampler = Sampler(options=dict(backend_options=dict(method=\"stabilizer\")))\n",
+    "exact_sampler = Sampler(\n",
+    "    options=dict(backend_options=dict(method=\"stabilizer\"))\n",
+    ")\n",
     "# The circuit needs to be transpiled to the AerSimulator target\n",
-    "pass_manager = generate_preset_pass_manager(1, AerSimulator(method=\"stabilizer\"))\n",
+    "pass_manager = generate_preset_pass_manager(\n",
+    "    1, AerSimulator(method=\"stabilizer\")\n",
+    ")\n",
     "isa_circuit = pass_manager.run(measured_circuit)\n",
     "pub = (isa_circuit, params)\n",
     "job = exact_sampler.run([pub])\n",
@@ -150,7 +154,9 @@
     ")\n",
     "\n",
     "noisy_sampler = Sampler(\n",
-    "    options=dict(backend_options=dict(method=\"stabilizer\", noise_model=noise_model))\n",
+    "    options=dict(\n",
+    "        backend_options=dict(method=\"stabilizer\", noise_model=noise_model)\n",
+    "    )\n",
     ")\n",
     "job = noisy_sampler.run([pub])\n",
     "result = job.result()\n",
