--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -206,7 +206,7 @@
     "observables_labels = [\"ZZ\", \"XX\", \"YZ\", \"ZY\", \"XY\", \"XZ\", \"ZX\"]\n",
     "observables = [SparsePauliOp(label) for label in observables_labels]\n",
     "\n",
-    "result = Estimator().run([qc]*7, observables).result()\n",
+    "result = Estimator().run([qc] * 7, observables).result()\n",
     "print(result)\n",
     "\n",
     "# Plot using Matplotlib\n",
@@ -252,7 +252,11 @@
    ],
    "source": [
     "from math import sqrt\n",
-    "standard_error = [sqrt(exp_data[\"variance\"])/sqrt(exp_data[\"shots\"]) for exp_data in result.metadata]\n",
+    "\n",
+    "standard_error = [\n",
+    "    sqrt(exp_data[\"variance\"]) / sqrt(exp_data[\"shots\"])\n",
+    "    for exp_data in result.metadata\n",
+    "]\n",
     "\n",
     "_, ax = plt.subplots()\n",
     "ax.bar(observables_labels, result.values, yerr=standard_error, capsize=2)\n",
