--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -215,7 +215,7 @@
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "isa_circuit = pm.run(qc)\n",
     "\n",
-    "isa_circuit.draw('mpl', idle_wires=False)"
+    "isa_circuit.draw(\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -387,9 +387,9 @@
     "errors = pub_result.data.stds\n",
     "\n",
     "# plotting graph\n",
-    "plt.plot(observables_labels, values, '-o')\n",
-    "plt.xlabel('Observables')\n",
-    "plt.ylabel('Values')\n",
+    "plt.plot(observables_labels, values, \"-o\")\n",
+    "plt.xlabel(\"Observables\")\n",
+    "plt.ylabel(\"Values\")\n",
     "plt.show()"
    ]
   },
@@ -416,7 +416,7 @@
     "# This can happen when the device occasionally behaves strangely. If this cell\n",
     "# fails, you may just need to run the notebook again.\n",
     "\n",
-    "_results = { obs: val for obs, val in zip(observables_labels, values) }\n",
+    "_results = {obs: val for obs, val in zip(observables_labels, values)}\n",
     "for _label in [\"IZ\", \"IX\", \"ZI\", \"XI\"]:\n",
     "    assert abs(_results[_label]) < 0.2\n",
     "for _label in [\"XX\", \"ZZ\"]:\n",
@@ -446,6 +446,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
+    "\n",
     "def get_qc_for_n_qubit_GHZ_state(n: int) -> QuantumCircuit:\n",
     "    \"\"\"This function will create a qiskit.QuantumCircuit (qc) for an n-qubit GHZ state.\n",
     "\n",
@@ -458,11 +459,12 @@
     "    if isinstance(n, int) and n >= 2:\n",
     "        qc = QuantumCircuit(n)\n",
     "        qc.h(0)\n",
-    "        for i in range(n-1):\n",
-    "            qc.cx(i, i+1)\n",
+    "        for i in range(n - 1):\n",
+    "            qc.cx(i, i + 1)\n",
     "    else:\n",
     "        raise Exception(\"n is not a valid input\")\n",
     "    return qc\n",
+    "\n",
     "\n",
     "# Create a new circuit with two qubits (first argument) and two classical\n",
     "# bits (second argument)\n",
@@ -497,7 +499,9 @@
     "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
     "# ZZII...II, ZIZI...II, ... , ZIII...IZ\n",
-    "operator_strings = ['Z' + 'I'*i + 'Z' + 'I'*(n-2-i) for i in range(n-1)]\n",
+    "operator_strings = [\n",
+    "    \"Z\" + \"I\" * i + \"Z\" + \"I\" * (n - 2 - i) for i in range(n - 1)\n",
+    "]\n",
     "print(operator_strings)\n",
     "print(len(operator_strings))\n",
     "\n",
@@ -528,7 +532,9 @@
     "# service = QiskitRuntimeService(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
     "service = QiskitRuntimeService()\n",
     "\n",
-    "backend = service.least_busy(simulator=False, operational=True, min_num_qubits=100)\n",
+    "backend = service.least_busy(\n",
+    "    simulator=False, operational=True, min_num_qubits=100\n",
+    ")\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "\n",
     "isa_circuit = pm.run(qc)\n",
@@ -619,15 +625,17 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# data\n",
-    "data = list(range(1, len(operators)+1)) # Distance between the Z operators\n",
+    "data = list(range(1, len(operators) + 1))  # Distance between the Z operators\n",
     "result = job.result()[0]\n",
-    "values = result.data.evs # Expectation value at each Z operator.\n",
-    "values = [v / values[0] for v in values] # Normalize the expectation values to evaluate how they decay with distance.\n",
+    "values = result.data.evs  # Expectation value at each Z operator.\n",
+    "values = [\n",
+    "    v / values[0] for v in values\n",
+    "]  # Normalize the expectation values to evaluate how they decay with distance.\n",
     "\n",
     "# plotting graph\n",
-    "plt.plot(data, values, marker='o', label='100-qubit GHZ state')\n",
-    "plt.xlabel('Distance between qubits $i$')\n",
-    "plt.ylabel(r'$\\langle Z_i Z_0 \\rangle / \\langle Z_1 Z_0 \\rangle $')\n",
+    "plt.plot(data, values, marker=\"o\", label=\"100-qubit GHZ state\")\n",
+    "plt.xlabel(\"Distance between qubits $i$\")\n",
+    "plt.ylabel(r\"$\\langle Z_i Z_0 \\rangle / \\langle Z_1 Z_0 \\rangle $\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
