--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -80,7 +80,7 @@
     "from qiskit.circuit.random import random_circuit\n",
     "\n",
     "qc_random = [(random_circuit(4, 4, measure=True)) for _ in range(30)]\n",
-    "qc_random[0].draw(output='mpl', idle_wires=False)"
+    "qc_random[0].draw(output=\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transpile_remote_serverless = serverless.load('transpile_remote_serverless')"
+    "transpile_remote_serverless = serverless.load(\"transpile_remote_serverless\")"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "job = transpile_remote_serverless.run(\n",
     "    circuits=qc_random,\n",
     "    backend=backend.name,\n",
-    "    optimization_level=optimization_level\n",
+    "    optimization_level=optimization_level,\n",
     ")"
    ]
   },
