--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "ghz.draw('mpl', idle_wires=False)"
+    "ghz.draw(\"mpl\", idle_wires=False)"
    ]
   },
   {
@@ -244,7 +244,7 @@
     "print(\"native gates:\" + str(backend.operation_names))\n",
     "qc = QuantumCircuit(2)\n",
     "qc.swap(0, 1)\n",
-    "qc.decompose().draw('mpl')"
+    "qc.decompose().draw(\"mpl\")"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "qc = QuantumCircuit(3)\n",
     "qc.ccx(0, 1, 2)\n",
-    "qc.decompose().draw('mpl')"
+    "qc.decompose().draw(\"mpl\")"
    ]
   },
   {
@@ -424,7 +424,7 @@
     "    optimization_level=3,\n",
     "    backend=backend,\n",
     "    timing_constraints=backend.target.timing_constraints(),\n",
-    "    scheduling_method=\"asap\"\n",
+    "    scheduling_method=\"asap\",\n",
     ")\n",
     "\n",
     "\n",
